--- a/mathematics/applied/electrical-engineering/sequential-logic/sr-latch/sr-latch.tex
+++ b/mathematics/applied/electrical-engineering/sequential-logic/sr-latch/sr-latch.tex
@@ -2,45 +2,52 @@
 \usepackage{tikz}
 \usetikzlibrary{arrows, shapes.gates.logic.US, shapes.gates.logic.IEC, calc}
 
+\tikzset{
+    my-nand-gate/.style={
+        nand gate US, draw, rotate=0, logic gate inputs=nn
+    },
+    my-branch/.style={
+        fill, shape=circle, minimum size=3pt, inner sep=0pt
+    },
+}
+
 \begin{document}
 
-\resizebox{22cm}{12cm}{
-
-    \tikzstyle{branch}=[fill,shape=circle,minimum size=3pt,inner sep=0pt]
+\resizebox{16cm}{!}{
 
     \begin{tikzpicture}[label distance=2mm]
 
         % INPUTS
-        \node[] (S) at (0,4) {\normalsize $s$};
-        \node[] (R) at (0,0) {\normalsize $r$};
+        \node[] (S)    at (0,4)   {\normalsize $s$};
+        \node[] (R)    at (0,0)   {\normalsize $r$};
 
         % OUTPUTS
         \node[] (Q)    at (8,3.8) {\normalsize $q$};
         \node[] (QBAR) at (8,.2)  {\normalsize $\bar{q}$};
 
         % NAND1, WIRES AND CONNECTOR POINTS
-        \node[nand gate US, draw, rotate=0, logic gate inputs=nn] (NAND1) at ($(S) + (4, -.2)$) {\normalsize $nand1$};
-        \coordinate[] (NAND1IN1) at ($(NAND1.input 1) + (-1, 0)$) {};
-        \coordinate[] (NAND1IN2) at ($(NAND1.input 2) + (-1, 0)$) {};
-        \node[branch] (NAND1OUT) at ($(NAND1.output)  + (1, 0)$)  {};
+        \node[my-nand-gate] (NAND1)    at ($(S) + (4, -.2)$)            {\normalsize $nand1$};
+        \coordinate[]       (NAND1IN1) at ($(NAND1.input 1) + (-1, 0)$) {};
+        \coordinate[]       (NAND1IN2) at ($(NAND1.input 2) + (-1, 0)$) {};
+        \node[my-branch]    (NAND1OUT) at ($(NAND1.output)  + (1, 0)$)  {};
         \draw (NAND1.input 1) -- (NAND1IN1);
         \draw (NAND1.input 2) -- (NAND1IN2);
         \draw (NAND1.output)  -- (NAND1OUT);
         
         % NAND2, WIRES AND CONNECTOR POINTS
-        \node[nand gate US, draw, rotate=0, logic gate inputs=nn] (NAND2) at ($(R) + (4, .2)$) {\normalsize $nand2$};
-        \coordinate[] (NAND2IN1) at ($(NAND2.input 1) + (-1, 0)$) {};
-        \coordinate[] (NAND2IN2) at ($(NAND2.input 2) + (-1, 0)$) {};
-        \node[branch] (NAND2OUT) at ($(NAND2.output)  + (1, 0)$)  {};
+        \node[my-nand-gate] (NAND2)    at ($(R) + (4, .2)$)             {\normalsize $nand2$};
+        \coordinate[]       (NAND2IN1) at ($(NAND2.input 1) + (-1, 0)$) {};
+        \coordinate[]       (NAND2IN2) at ($(NAND2.input 2) + (-1, 0)$) {};
+        \node[my-branch]    (NAND2OUT) at ($(NAND2.output)  + (1, 0)$)  {};
         \draw (NAND2.input 1) -- (NAND2IN1);
         \draw (NAND2.input 2) -- (NAND2IN2);
         \draw (NAND2.output)  -- (NAND2OUT);
 
-        % INPUTS
+        % INPUT CONNECTIONS
         \draw (S) -- (NAND1IN1);
         \draw (R) -- (NAND2IN2);
         
-        % OUTPUTS
+        % OUTPUT CONNECTIONS
         \draw (NAND1OUT) -- (Q);
         \draw (NAND2OUT) -- (QBAR);
 
